# X7Q-BASIC-VERSION-SAFE-

./: Cargo.toml  README.md  x7q_secure_container_report_v0.2.md
crates/x7q-cli/: Cargo.toml
crates/x7q-cli/src/: main.rs
crates/x7q-cli/tests/: cli.rs
crates/x7q-core/: Cargo.toml
crates/x7q-core/src/: lib.rs
crates/x7q-parser/: Cargo.toml
crates/x7q-secure/: Cargo.toml
docs/: shareable-test-and-validation-report.md  x7q-secure-v1-report.md
spec/: x7q_secure_v1.0.md  x7q_secure_v2.0.md
tests/fixtures/: README.md  secure_build.manifest  secure_valid.x7q  valid_minimal.x7q
tools/: x7q-gui.ps1
x7q-github-ready/crates/x7q-format/: Cargo.toml
x7q-github-ready/crates/x7q-format/src/: lib.rs
x7q-github-ready/crates/x7q-parser/src/: lib.rs
x7q-github-ready/crates/x7q-secure/src/: lib.rs  main.rs
x7q-github-ready/crates/x7q-secure/tests/: cli.rs
x7q-github-ready/docs/: a-new-max-secured-text-document-type-for-texts-and-ai-prompt-files.md  implementation-status.md
x7q-github-ready/fuzz/: README.md
x7q-github-ready/spec/: x7q_v0.1.md
x7q-github-ready/tests/fixtures/: invalid_magic.x7q  secure_invalid_hash.x7q
