[package]
name = "x7q-secure"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "x7q-secure"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
pdf-extract = "0.10.0"
rand = "0.10.1"
sha2 = "0.11.0"
